--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(col2hex)
 export(convert_pdf_to_png)
 export(convert_to_cmyk)
 export(dir_ensure)
+export(install_and_load_packages)
+export(read_csv_from_gdrive)
 export(save_kable_workaround)
 export(st_bbox_str)
 export(st_write_shp)
@@ -14,4 +16,7 @@ export(substr_right)
 export(timestamp)
 import(httr)
 import(sf)
+importFrom(googledrive,drive_get)
+importFrom(googledrive,drive_read_string)
 importFrom(sf,st_bbox)
+importFrom(utils,read.csv)
