--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tlmr
 Type: Package
-Title: Temperature Conversion Package for Demonstration
+Title: Tyler L McIntosh personal utility functions
 Version: 0.0.0.3
 Encoding: UTF-8
 Author: Tyler L. McIntosh
