--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(substr_right)
 export(timestamp)
 import(httr)
 import(sf)
-importFrom(glue,glue)
 importFrom(googledrive,drive_get)
 importFrom(googledrive,drive_read_string)
 importFrom(here,here)
@@ -31,9 +30,6 @@ importFrom(pak,pkg_install)
 importFrom(pdftools,pdf_render_page)
 importFrom(sf,st_bbox)
 importFrom(sf,st_read)
-importFrom(tools,file_ext)
-importFrom(tools,file_path_sans_ext)
-importFrom(utils,install.packages)
-importFrom(utils,read.csv)
+importFrom(sf,st_write)
 importFrom(webshot2,webshot)
 importFrom(zip,zip)
