--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(col2hex)
 export(convert_pdf_to_png)
 export(convert_to_cmyk)
 export(dir_ensure)
+export(download_data_from_gdrive)
 export(install_and_load_packages)
 export(read_csv_from_gdrive)
 export(save_kable_workaround)
@@ -16,6 +17,8 @@ export(substr_right)
 export(timestamp)
 import(httr)
 import(sf)
+importFrom(googledrive,as_id)
+importFrom(googledrive,drive_download)
 importFrom(googledrive,drive_get)
 importFrom(googledrive,drive_read_string)
 importFrom(here,here)
