build mblm functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(convert_pdf_to_png)
 export(convert_to_cmyk)
 export(dir_ensure)
 export(download_data_from_gdrive)
+export(fit_mblm_estimator_and_visualize)
 export(install_and_load_packages)
 export(read_csv_from_gdrive)
 export(save_kable_workaround)
@@ -25,6 +26,11 @@ export(substr_right)
 export(timestamp)
 import(httr)
 import(sf)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_abline)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
 importFrom(googledrive,as_id)
 importFrom(googledrive,drive_download)
 importFrom(googledrive,drive_get)
@@ -37,9 +43,12 @@ importFrom(httr,timeout)
 importFrom(kableExtra,save_kable)
 importFrom(magick,image_read)
 importFrom(magick,image_write)
+importFrom(mblm,mblm)
 importFrom(pak,pkg_install)
 importFrom(pdftools,pdf_render_page)
 importFrom(purrr,map)
+importFrom(rlang,as_name)
+importFrom(rlang,enquo)
 importFrom(rstac,assets_url)
 importFrom(rstac,get_request)
 importFrom(rstac,stac)
