--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,9 @@ export(convert_pdf_to_png)
 export(convert_to_cmyk)
 export(dir_ensure)
 export(download_data_from_gdrive)
-export(fit_mblm_estimator_and_visualize)
 export(install_and_load_packages)
+export(mblm_fit_estimator_and_visualize)
+export(mblm_get_coefficients_by_group)
 export(read_csv_from_gdrive)
 export(save_kable_workaround)
 export(st_bbox_str)
@@ -26,6 +27,10 @@ export(substr_right)
 export(timestamp)
 import(httr)
 import(sf)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_split)
+importFrom(dplyr,pull)
+importFrom(dplyr,tibble)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_point)
@@ -47,8 +52,6 @@ importFrom(mblm,mblm)
 importFrom(pak,pkg_install)
 importFrom(pdftools,pdf_render_page)
 importFrom(purrr,map)
-importFrom(rlang,as_name)
-importFrom(rlang,enquo)
 importFrom(rstac,assets_url)
 importFrom(rstac,get_request)
 importFrom(rstac,stac)
