add functions from disturbance patterns work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,10 @@ export(mblm_get_coefficients_by_group)
 export(read_csv_from_gdrive)
 export(save_kable_workaround)
 export(st_bbox_str)
+export(st_crop_careful_universal)
 export(st_write_shp)
 export(substr_right)
+export(test_future_function)
 export(timestamp)
 import(httr)
 import(sf)
@@ -31,11 +33,15 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_split)
 importFrom(dplyr,pull)
 importFrom(dplyr,tibble)
+importFrom(future,multisession)
+importFrom(future,plan)
+importFrom(future,sequential)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(glue,glue)
 importFrom(googledrive,as_id)
 importFrom(googledrive,drive_download)
 importFrom(googledrive,drive_get)
@@ -50,18 +56,31 @@ importFrom(magick,image_read)
 importFrom(magick,image_write)
 importFrom(mblm,mblm)
 importFrom(pak,pkg_install)
+importFrom(parallel,detectCores)
 importFrom(pdftools,pdf_render_page)
 importFrom(purrr,map)
+importFrom(raster,crop)
+importFrom(raster,crs)
+importFrom(raster,mask)
 importFrom(rstac,assets_url)
 importFrom(rstac,get_request)
 importFrom(rstac,stac)
 importFrom(rstac,stac_search)
 importFrom(sf,gdal_utils)
+importFrom(sf,st_as_sf)
 importFrom(sf,st_bbox)
 importFrom(sf,st_crs)
 importFrom(sf,st_read)
 importFrom(sf,st_transform)
 importFrom(sf,st_write)
+importFrom(terra,crop)
+importFrom(terra,crs)
+importFrom(terra,mask)
 importFrom(terra,rast)
+importFrom(terra,same.crs)
+importFrom(terra,unwrap)
+importFrom(terra,wrap)
+importFrom(tictoc,tic)
+importFrom(tictoc,toc)
 importFrom(webshot2,webshot)
 importFrom(zip,zip)
